# inverse_scattering_jax

./: .gitignore  LICENSE  README.md  debug_vjp.py  pyproject.toml
inverse_scattering_jax/: __init__.py
inverse_scattering_jax/src/: helmholtz.py  inverse_scattering.py  plot_utils.py
inverse_scattering_jax/tests/: test_forward.py  test_inverse_scattering.py  test_numerical.py
notebooks/: benchmarking_modes.ipynb  forward_demo.ipynb  inverse_reconstruction.ipynb
